public/css/main.css
/**
* green: rgb(22, 193, 100);
* red: rgb(235, 44, 55);
* light-grey: #a2a2a2;
* regular grey: #333;
*/
html {
  scroll-behavior: smooth;
  width: 100%;
  max-width: 100%;
}

body {
	color: #333;
	font-size: 1rem;
  font-weight: 200;
  line-height: 1.5;
}

div > h1:first-child { margin-top: 0; }

.container {
  padding: 3em 0 0 2em;
  float: left;
  width: 80%;
}
.navigation {
  float: left;
  width: 20%;
  border-right: .1rem solid #dce3ea;
  min-height: 100vh;
  position: fixed;
}
.container.main {
  margin-left: 20%;
  padding-left: 4em;
}

p { font-size: 1rem; }
h1,h2,h3 { color: #000; font-weight: 600; font-family: 'Helvetica Neue', 'Roboto', 'Lato', sans-serif; }
h1 { font-size: 3em; }
h4 { font-size: 1rem !important; }
h5, h6 { margin: 0; }
h5 {
  font-weight: 300;
  letter-spacing: .03rem;
  line-height: 1.55;
}
h6 {
  font-weight: 400;
  line-height: 1.6;
  letter-spacing: .03rem;
  color: #47525c;
}
a { color: #a2a2a2; text-decoration: none; }
a:hover { color: rgb(235, 44, 55) !important; }
a:focus { color: rgb(235, 44, 55) !important; }
a:visited { color: #a2a2a2; }
ol { counter-reset: a; padding-left: 18px; }
ul, ol { list-style: none; padding-left: 0; }
ol > li { position: relative; padding-left: 25px; }
ol > li::before { 
    content: counter(a,decimal-leading-zero) "."; 
    width: 25px; 
    color: rgb(235, 44, 55); 
    counter-increment: a;
    font-size: .777777em;
    position: absolute;
    left: 0;
    margin-top: .2em;
}
ul.spaced > li {
	margin-bottom: 1em;
}
ul.spaced-m > li {
  margin-bottom: 0.5em;
}
li.active > a {
  color: #0e0e0e;
  font-weight: 400;
}
hr {
  opacity: .3;
  margin-bottom: 1.85rem;
  box-sizing: content-box;
  height: 0;
  overflow: visible;
}
.uppercase { text-transform: uppercase; }
.subtitle { font-size: .6em }
img.icon {
  margin-top: -.25rem;
  margin-right: .5rem;
  vertical-align: middle;
}
.image { max-width: 100%; }
.header-image {
  max-width: 1em;
  height: 100%;
  vertical-align: middle;
  margin: -.2em .5em 0 0;
}
hr { border-top: .2px solid #e8e8e8; }
.header {
  margin-bottom: 3.5em;
}
footer { padding: 4em 0 4em 0; }
.center { text-align: center; }


::selection {
    background: #0e0e0e;
    color: #fff;
    text-shadow: 0 0 0 transparent;
}

.intro > p {
	font-size: 2.5em;
	font-weight: 100;
	line-height: 1.3;
}

.sidebar-footer {
  position: absolute;
  bottom: 4em;
  left: 1em;
}

.button {
  text-transform: uppercase;
  background-color: #0e0e0e;
  color: #fff;
  padding: .2em 1.5em;
  border: 0;
  opacity: 1;
  transition: 0.3s;
}
.button:hover {
  opacity: 0.6;
  cursor: pointer;
}

.text-inline { display: inline-block; }

.breadcrumbs span.breadcrumb {
  background: rgb(170, 170, 160);
  background: linear-gradient(90deg, #EB2C37, blue);
  height: 1.25rem;
  width: 1.25rem;
  border-radius: 50%;
  vertical-align: sub;
  transition: all .2s ease-in-out;
  margin-right: 1em;
}

.mobile { display: none; }
@media (max-width: 1024px) {

  .outer {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    width: 100%;
  }

  .navigation {
    max-width: 100%;
    width: 100%;
    margin: 0;
    padding: 0 !important;
    min-height: unset;
    position: relative;
    border: none;
  }
  .container {
    width: 100%;
    max-width: 100%;
    padding: 0;
    margin: 0;
  }
  .container.main {
    margin: 0 auto;
    padding: 0;
    width: 90%;
  }

  .intro > p { font-size: 2em; }

  .desktop-only {
    display: none;
  }

  .mobile { display: block; }

  .mobile-nav-button {
    float: right;
    padding-right: 2em;
  }

  .header {
    padding: 2em 0 2em 1.5em;
    margin-bottom: 0em;
  }

  .row [class^="col"] {
    margin: 0;
    width: 100%;
  }

  ul.nav {
    display: block;
    width: 100%;
    background-color: #a2a2a2;
    text-align: center;

    max-height: 0;
    opacity: 0;
    overflow: hidden;
    transition: max-height 0.9s ease 0s;
  }
  ul.nav li {
    padding: 1em 2em;
  }
  ul.nav li a {
    color: #fff;
    font-weight: 400;
  }
}

